--- a/stepscore/src/index.css
+++ b/stepscore/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Roboto", Regular;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #222222;
+
+  @font-face {
+    font-family: "Roboto";
+    src: "./assets/typo/Roboto" format("truetype");
+  }
 }
 
 code {
